--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
   },
   "scripts": {
     "update-hooks": "simple-git-hooks",
-    "changeset": "changeset",
     "submodule:init": "git submodule update --init",
     "submodule:update": "git submodule update --remote",
     "cmake": "emcmake cmake -S src/cpp -B build",
@@ -92,7 +91,8 @@
     "prepublishOnly": "pnpm -s build:all",
     "bump-biome:latest": "pnpm add -DE @biomejs/biome@latest",
     "bump-biome:nightly": "pnpm add -DE @biomejs/biome@nightly",
-    "sync-emsdk": "./scripts/sync-emsdk.sh"
+    "sync-emsdk": "./scripts/sync-emsdk.sh",
+    "test": "vitest"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -101,18 +101,22 @@
     "@changesets/cli": "^2.27.7",
     "@types/babel__core": "^7.20.5",
     "@types/node": "^22.5.0",
+    "@vitest/ui": "^2.0.5",
     "concurrently": "^8.2.2",
     "copy-files-from-to": "^3.11.0",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
     "rimraf": "^6.0.1",
+    "sharp": "^0.33.5",
     "simple-git-hooks": "^2.11.1",
+    "tinyglobby": "^0.2.3",
     "tsx": "^4.17.0",
     "typedoc": "^0.26.6",
     "typescript": "^5.5.4",
     "vite": "^5.4.2",
-    "vite-plugin-babel": "^1.2.0"
+    "vite-plugin-babel": "^1.2.0",
+    "vitest": "^2.0.5"
   },
   "dependencies": {
     "@types/emscripten": "^1.39.13"
